@@ -530,6 +530,10 @@ Extension Modules
 Tests
 -----
 
+- Issue #15747: ZFS always returns EOPNOTSUPP when attempting to set the
+  UF_IMMUTABLE flag (via either chflags or lchflags); refactor affected
+  tests in test_posix.py to account for this.
+
 - Issue #16549: Add tests for json.tools.  Initial patch by Berker Peksag
   and Serhiy Storchaka.
 
